Fixed some alignment and image resize bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,6 @@
   --hover-col: #a255c0;
   --brd-rad: 8px;
   --transition: 0.5s;
-
-  /* 
-  DOES NOTHING, DRY?
-  margin: 0; */
-  /* padding: 0; */
-  /* box-sizing: border-box; */
 }
 
 * {
@@ -17,13 +11,14 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* removal of the standard scroll bar but still allows page to scroll */
 html {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
   overflow-y: scroll;
   scroll-behavior: smooth;
 }
-
+/* same as above for different browsers */
 html ::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
@@ -48,12 +43,6 @@ ul {
   list-style-type: none;
 }
 
-/* 
-DOES NOTHING, DRY?
-body {
-  font-family: var(--font-family);
-} */
-
 nav {
   position: sticky;
   display: flex;
@@ -73,6 +62,7 @@ nav {
   color: var(--prim-font);
 }
 
+/* styling changes when user's mouse hovers over nav links */
 .nav-link:hover {
   color: var(--hover-col);
   text-shadow: 2px grey;
@@ -81,6 +71,7 @@ nav {
   border-radius: var(--brd-rad);
 }
 
+/* content appears when user hovers over nav links */
 .nav-link:hover::after {
   color: var(--hover-col);
   content: " <3";
@@ -91,7 +82,7 @@ nav ul {
   gap: 2rem;
 }
 
-/* cover this button later */
+/* NAV LINKS become this Button on smaller screens */
 .moba-nav {
   color: var(--prim-font);
   font-size: 2rem;
@@ -127,7 +118,7 @@ nav ul {
   border-color: var(--prim-font);
   cursor: pointer;
 }
-
+/* more info about Kym, hidden as base but toggled by the user clicking the TLDR button */
 .hidden {
   display: none;
 }
@@ -148,23 +139,6 @@ nav ul {
   line-height: 1.6rem;
 }
 
-/* 
-DOES NOTHING, DRY?
-.skills-container,
-.contact-container {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  flex-wrap: wrap;
-  max-width: 90%;
-  padding: 1rem;
-  margin: 3rem;
-  margin-top: -0.1rem;
-  border-radius: var(--brd-rad);
-  text-align: justify;
-  box-shadow: 1px 4px 10px 0px var(--prim-font);
-} */
-
 .project-card,
 .hero-project-container {
   display: flex;
@@ -181,28 +155,8 @@ DOES NOTHING, DRY?
   box-shadow: 1px 4px 10px 0px var(--prim-font);
   line-height: 1.6rem;
 }
-/* DOES NOTHING, DRY? */
-/* .hero-project-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-self: center;
-  max-width: 25%;
-  min-width: 85%;
-  min-height: 320px;
-  padding: 1rem;
-  margin-left: 3rem;
-  margin-bottom: 1rem;
-  border-radius: var(--brd-rad);
-  text-align: justify;
-  box-shadow: 1px 4px 10px 0px var(--prim-font);
-  line-height: 1.6rem;
-  background-color: white;
-  align-items: center;
-} */
 
 .hero-project-container {
-  flex-flow: row wrap;
   min-width: 85%;
   line-height: 1.6rem;
   background-color: white;
@@ -218,31 +172,6 @@ a > .project-hero-pic {
   max-width: 100%;
 }
 
-/* DOES NOTHING, DRY? */
-/* a > .project-hero-pic {
-  display: flex;
-  justify-content: center;
-  max-width: 100%;
-  align-items: center;
-} */
-
-/* DOES NOTHING, DRY? */
-/* a > .project-hero-pic:hover {
-  display: flex;
-  justify-content: center;
-  max-width: 100%;
-  align-items: center;
-} */
-
-.project-pic {
-  align-self: center;
-  width: 65%;
-  height: 60%;
-  border-radius: var(--brd-rad);
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-}
-
 .projects-container {
   display: flex;
   align-items: center;
@@ -253,9 +182,15 @@ a > .project-hero-pic {
   margin-left: 1.5rem;
 }
 
-.project-pic:hover {
-  width: 100%;
-  transition: var(--transition);
+.project-pic {
+  position: relative;
+  display: block;
+  align-self: center;
+  max-width: 45%;
+  max-height: 35%;
+  border-radius: var(--brd-rad);
+  padding-bottom: 1rem;
+  padding-top: 3rem;
 }
 
 .hidden-title,
@@ -297,12 +232,6 @@ a > .project-hero-pic {
   height: auto;
   margin-bottom: 0.5rem;
 }
-
-/* DOES NOTHING, DRY? 
-.contact-container > a {
-  display: flex;
-  justify-content: center;
-} */
 
 a {
   display: flex;
@@ -395,7 +324,7 @@ a {
   h3.project-title {
     text-align: left;
   }
-  /* below here burger bar */
+  /* below here 'burger bar' Nav menu styling */
   nav {
     padding: 1.5rem 1rem;
   }
@@ -427,7 +356,7 @@ a {
     transform: translateX(0);
   }
 
-  /* abover here burger bar  */
+  /* abover here 'burger bar' Nav menu styling  */
 
   .bio {
     max-width: 25rem;
@@ -446,7 +375,6 @@ a {
     justify-content: space-between;
     align-self: center;
     max-width: 65%;
-    /* max-height: 220px; */
     padding: 1rem;
     margin-left: 0rem;
     margin-bottom: 1rem;
